# nafa

./: .gitignore  Cargo.toml  README.md  justfile  polarfire jtag device_info notes  pyproject.toml  rust-toolchain.toml  rustfmt.toml
nafa-cli/: Cargo.toml
nafa-cli/src/: cli_helpers.rs  commands.rs  main.rs
nafa-cli/src/commands/: flash.rs  microchip.rs  xilinx.rs  xilinx16.rs
nafa-cli/src/commands/microchip/: info.rs  program.rs  read_idcode.rs
nafa-cli/src/commands/xilinx/: info.rs  program.rs  program_bbram.rs  readback.rs  xadc.rs
nafa-cli/src/commands/xilinx16/: program.rs  readback.rs
nafa-cli/src/commands/xilinx32/: info.rs  program.rs  program_bbram.rs  readback.rs  xadc.rs
nafa-io/: Cargo.toml
nafa-io/src/: backend.rs  cables.rs  controller.rs  devices.rs  fake_backend.rs  ftdi.rs  jtag.rs  lib.rs  units.rs  usb_blaster.rs  utils.rs  xpc.rs
nafa-io/src/ftdi/: devices.rs  io.rs
nafa-io/src/jtag/: jep106.rs
nafa-io/src/usb_blaster/: firmware.rs  io.rs
nafa-io/src/xpc/: firmware.rs
nafa-microchip/: Cargo.toml
nafa-microchip/src/: _32bit.rs  lib.rs
nafa-microchip/src/_32bit/: commands.rs  info.rs  program.rs
nafa-xilinx/: Cargo.toml
nafa-xilinx/scripts/bitstreams/: Makefile  empty.v  get-parts.tcl  make.tcl  parts.sh  unbin.py
nafa-xilinx/src/: _16bit.rs  _32bit.rs  lib.rs  zynq.rs  zynq_32.rs
nafa-xilinx/src/_16bit/: actions.rs  commands.rs  info.rs  registers.rs
nafa-xilinx/src/_16bit/actions/: program.rs  readback.rs  status.rs
nafa-xilinx/src/_32bit/: actions.rs  bbram.rs  bitstream.rs  commands.rs  crc.rs  drp.rs  info.rs  io_utils.rs  nky.rs  registers.rs
nafa-xilinx/src/_32bit/actions/: bbram.rs  info.rs  program.rs  readback.rs  xadc.rs
nafa-xilinx/src/zynq/: commands.rs  io_utils.rs
nafa-xilinx/src/zynq/actions/: info.rs
nafa-xilinx/src/zynq_32/: commands.rs  info.rs
nafa_py/: generated.py
