[workspace]
resolver = "3"
members = ["nafa-cli", "nafa-io", "nafa-xilinx"]
default-members = ["nafa-cli"]

[workspace.package]
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["Bryce Berger"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
facet = "0.43.2"
facet-json = "0.43.2"
facet-pretty = "0.43.2"
facet-python = "0.43.2"
hex = "0.4"
nafa-cli.path = "nafa-cli"
nafa-io.path = "nafa-io"
nafa-xilinx.path = "nafa-xilinx"
nusb = { version = "0.2.1", features = ["smol"] }
smol = "2"
strum = "0.27.2"
tracing = "0.1"
