[package]
name = "nafa-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
facet-json.workspace = true
facet-pretty.workspace = true
facet.workspace = true
hex.workspace = true
indicatif = "0.18.2"
nafa-io.workspace = true
nafa-xilinx.workspace = true
nafa-microchip.workspace = true
nusb.workspace = true
smol.workspace = true
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing.workspace = true
