[package]
name = "nafa-io"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.89"
eyre.workspace = true
futures-io = "0.3"
futures-lite = "2.6.1"
nusb.workspace = true
strum = { workspace = true, features = ["derive"] }
tracing.workspace = true
